# adventofcode

./: README.md  pyproject.toml
.github/workflows/: lint-typecheck.yml
2023/: 11.py  2.py  5.py  6.py  8.py
2024/: 1.py
aoc/: 1.py  10.py  2.py  3.py  4.py  7.py  8.py  9.py
utils/: aoc.py
